--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,46 @@
+
+#root {
+    background: linear-gradient(-45deg, #30160e, #350c1c, #081f28, #083228);
+    background-size: 400% 400%;
+    animation: gradient 15s ease infinite;
+
+}
+
+@keyframes gradient {
+    0% {
+        background-position: 0% 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
+    }
+}
 .App{
     display: flex;
     width: 60vw;
     height: 100vh;
     margin-left: 20vw;
     flex-direction: column;
+    background-color: rgba(13, 17, 23,.6);
+    -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+    -khtml-user-select: none; /* Konqueror HTML */
+    -moz-user-select: none; /* Old versions of Firefox */
+    -ms-user-select: none; /* Internet Explorer/Edge */
+    user-select: none;
 
 
+
+}
+h1{
+    text-align: center;
+    color: #b5b5b5;
+}
+input#formTodo,input.form-control{
+    background-color : #161B22 ;
+    border: #373740;
 }
 header{
 
@@ -28,17 +63,18 @@ section{
     display: flex;
     flex-direction: row;
     height: fit-content;
-    margin-bottom: 3%;
+    margin-bottom: 5%;
 
     justify-content: space-between;
 }
 
 .topHeader{
+
     display: flex;
     flex-direction: row;
     height: fit-content;
     width: 100%;
-    margin-bottom: 0.5%;
+    margin-bottom: 3%;
     justify-content: space-between;
 }
 .pHeader{
@@ -62,18 +98,35 @@ section{
     flex-direction: row;
 
 }
-
+p.pHeader{
+    display: flex;
+    align-self: center;
+    color: white;
+    font-size: 1.5vw;
+}
 .formAgenda{
     display: flex;
     justify-content: flex-end;
 }
-.todoElem{
+#todoElemfalse{
     display: flex;
     flex-direction: row;
     width: 50vw;
     align-self: center;
     justify-content: space-between;
+    border: 1px solid rgba(43, 43, 43, 0.6);
+    background-color: #161B22;
 
+
+}
+#todoElemtrue{
+    background-color: #470913;
+    display: flex;
+    flex-direction: row;
+    width: 50vw;
+    align-self: center;
+    justify-content: space-between;
+    border: 1px solid rgba(43, 43, 43, 0.6);
 
 }
 p{
@@ -87,13 +140,24 @@ p{
     height: fit-content;
     text-align: center;
     width: 50vw;
-    align-self: center;
+
     align-items: center;
 
 }
 
+#datep{
+    display: block;
+    color: #949393;
+    font-size: 70%;
+    left: 0px;
+    width: 10%;
+
+
+}
 #ppp{
+
     display: flex;
+    color: white;
 }
 #agendaP{
     display: flex;
@@ -109,8 +173,9 @@ p{
 }
 .todoB{
     display: flex;
-    width: fit-content;
+    width: 10%;
     justify-self: flex-end;
+    justify-content: center;
 }
 main{
     display: flex;
@@ -143,12 +208,26 @@ dl, ol, ul {
     justify-content: center;
     flex-direction: column;
     align-items: flex-start;
+
+}
+div.dropdown-menu.show{
+    background-color: #161B22;
+}
+.dropdown a{
+    color: white;
 }
 
-
-
-
-
+input.mx-3.my-2.w-auto.form-control{
+    background-color: #181e28;
+    color: white;
+}
+input.mx-3.my-2.w-auto.form-control::placeholder{
+    color: #ababab;
+}
+a.Agendas.dropdown-item:hover{
+    background-color: #19202b;
+    color: white;
+}
 
 
 /*checkbox animation credit :
@@ -178,7 +257,7 @@ dl, ol, ul {
     width: 100%;
     height: 100%;
     cursor: pointer;
-    background: #326fa8;
+    background: #161B22;
 
     border-radius: 5px;
     font-weight: bold;
@@ -200,8 +279,8 @@ dl, ol, ul {
     left: 0px;
     width: 100%;
     font-size: 12px;
-    color: #591717;
-    text-shadow: 0px 1px 0px rgba(255, 255, 255, 0.35);
+    color: #706f6f;
+
     z-index: 1;
 }
 .onoff label:before {
@@ -224,7 +303,7 @@ dl, ol, ul {
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.4);
 }
 .onoff input:checked + label {
-    background: #cd3c3c;
+    background: #922020;
     text-indent: 17px;
 
 }
